--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -20,8 +20,9 @@
             </div>
         </div>
     </div>
-    <div>
-        loading..
+    <div class="mt-5">
+        loading.. <br>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi nihil molestiae iste aliquid consequuntur assumenda. Consectetur ea nobis earum minima sunt exercitationem, excepturi sit quae quo vitae eaque est inventore.
     </div>
 </div>
 
