--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -12,6 +12,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
+
   {% comment %} css link {% endcomment %}
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
   <link rel="stylesheet" href="{% static 'car_risk/css/style.css' %}">
@@ -63,7 +64,8 @@
 
 
   <div class="footer_">
-        <p class="pt-3 text-center">Copyright @2022 SHISHIR. All rights reserved <a href="https://www.facebook.com/devsabirul80"> shisa it company </a> </p>        
+    <p class="pt-3 text-center">Copyright @2022 SHISHIR. All rights reserved <a
+        href="https://www.facebook.com/devsabirul80" target="_blank"> shisa it company </a> </p>
   </div>
 
   <!--  Separate Popper and Bootstrap JS -->
