--- a/car_risk/templates/carrisk/result.html
+++ b/car_risk/templates/carrisk/result.html
@@ -54,6 +54,7 @@
             <hr>
             <div class="link">
                 <span class="float-start">thank you. it's designed by <a href="https://www.facebook.com/devsabirul80" target = "blank">shisa it company</a></span>  <span class="float-end"><a href="/car_risk">try again!</a></span>
+                <p id="print">print</p>
            </div>
         </div>
 </div>
