--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -20,10 +20,62 @@
             </div>
         </div>
     </div>
-    <div class="mt-5">
-        loading.. <br>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi nihil molestiae iste aliquid consequuntur assumenda. Consectetur ea nobis earum minima sunt exercitationem, excepturi sit quae quo vitae eaque est inventore.
-    </div>
+    <div class="featured_section">
+            <div class="row mb-5">
+                <div class="col-lg-12 d-flex justify-content-center text-center">
+                    <div class="featur_content mt-5">
+                        <h6>WHAT WE OFFER</h6>
+                        <h1>Our Featured Solutions</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores vero veniam ratione fugit recusandae rerum libero</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-3 col-sm-6">
+                    <div class="featured-solution-card">
+                        <i class="bx bxs-analyse"></i>
+                        <h3>
+                            <a href="#">Robotic Automation</a>
+                        </h3>
+                        <p>Sorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
+                        <a href="#" class="read-more">Discover More</a>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-sm-6">
+                    <div class="featured-solution-card">
+                        <i class="bx bx-shape-circle"></i>
+                        <h3>
+                            <a href="#">Cognitive Automation</a>
+                        </h3>
+                        <p>Sorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
+                        <a href="#" class="read-more">Discover More</a>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-sm-6">
+                    <div class="featured-solution-card">
+                        <i class="bx bx-badge-check"></i>
+                        <h3>
+                            <a href="#">Security &amp; Surveillance</a>
+                        </h3>
+                        <p>Sorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
+                        <a href="#" class="read-more">Discover More</a>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-sm-6">
+                    <div class="featured-solution-card">
+                        <i class="bx bx-layer"></i>
+                        <h3>
+                            <a href="#">Cognitive Engagement</a>
+                        </h3>
+                        <p>Sorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
+                        <a href="#" class="read-more">Discover More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
 </div>
 
 {% endblock body %}
