--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -13,7 +13,9 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
 
+
   {% comment %} css link {% endcomment %}
+  <link rel="stylesheet" href="{% static 'css/fontawesome.css' %}">
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
   <link rel="stylesheet" href="{% static 'car_risk/css/style.css' %}">
   <link rel="stylesheet" href="{% static 'carprice/css/style.css' %}">
@@ -77,6 +79,7 @@
     integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
     crossorigin="anonymous"></script>
   <script src="{% static 'car_risk/js/index.js' %}"></script>
+  <script src="{% static 'js/fontawesome.js' %}"></script>
 </body>
 
 </html>
