--- a/car_risk/templates/carrisk/result.html
+++ b/car_risk/templates/carrisk/result.html
@@ -52,9 +52,9 @@
                 </tr>
             </table>
             <hr>
+            <div class="btn btn-success w-100" id="print_btn">Print</div>
             <div class="link">
                 <span class="float-start">thank you. it's designed by <a href="https://www.facebook.com/devsabirul80" target = "blank">shisa it company</a></span>  <span class="float-end"><a href="/car_risk">try again!</a></span>
-                <p id="print">print</p>
            </div>
         </div>
 </div>
@@ -68,7 +68,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
     integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
     crossorigin="anonymous"></script>
-  <script src="{% static 'car_risk/js/index.js' %}"></script>
+  <script src="{% static 'car_risk/js/result.js' %}"></script>
 </body>
 
 </html>
