--- a/community/templates/community/index.html
+++ b/community/templates/community/index.html
@@ -1,5 +1,5 @@
 {% extends "base/base.html" %}
 {% block title %}Home Page{% endblock title %}
 {% block body %}
-This is home page
+This is community page
 {% endblock body %}
