add card section

--- a/home/static/home/css/style.css
+++ b/home/static/home/css/style.css
@@ -21,6 +21,12 @@
     line-height: 30px;
 }
 
+.icon_card {
+    font-size: 45px;
+    margin-bottom: 15px;
+    color: #0000ff;
+}
+
 .button_.btn-success {
     background-color: #ff4949;
 }
