--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -11,7 +11,9 @@
                     <div class="contant">
                         <h1>World’s Leading AI & Machine Learning Company</h1>
                         <p class='mt-3'>
-                            ML today are able to supply needful of help, information, and positive experience of maintaining intimacy with customers. Eventually, chatbot ideas bring a pleasant experience of all these qualities into the conversation.
+                            ML today are able to supply needful of help, information, and positive experience of
+                            maintaining intimacy with customers. Eventually, chatbot ideas bring a pleasant experience
+                            of all these qualities into the conversation.
                         </p>
                         <button type="button" class="button_ btn  btn-primary">GET STARTED</button>
                         <button type="button" class="button_ btn btn-success">TRY IT FREE</button>
@@ -20,62 +22,72 @@
             </div>
         </div>
     </div>
-    <div class="featured_section">
-            <div class="row mb-5">
-                <div class="col-lg-12 d-flex justify-content-center text-center">
-                    <div class="featur_content mt-5">
-                        <h6>WHAT WE OFFER</h6>
-                        <h1>Our Featured Solutions</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores vero veniam ratione fugit recusandae rerum libero</p>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-3 col-sm-6">
-                    <div class="featured-solution-card">
-                        <i class="bx bxs-analyse"></i>
-                        <h3>
-                            <a href="#">Robotic Automation</a>
-                        </h3>
-                        <p>Sorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
-                        <a href="#" class="read-more">Discover More</a>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-sm-6">
-                    <div class="featured-solution-card">
-                        <i class="bx bx-shape-circle"></i>
-                        <h3>
-                            <a href="#">Cognitive Automation</a>
-                        </h3>
-                        <p>Sorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
-                        <a href="#" class="read-more">Discover More</a>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-sm-6">
-                    <div class="featured-solution-card">
-                        <i class="bx bx-badge-check"></i>
-                        <h3>
-                            <a href="#">Security &amp; Surveillance</a>
-                        </h3>
-                        <p>Sorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
-                        <a href="#" class="read-more">Discover More</a>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-sm-6">
-                    <div class="featured-solution-card">
-                        <i class="bx bx-layer"></i>
-                        <h3>
-                            <a href="#">Cognitive Engagement</a>
-                        </h3>
-                        <p>Sorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
-                        <a href="#" class="read-more">Discover More</a>
-                    </div>
+    <div class="featured_section container">
+        <div class="row mb-5">
+            <div class="col-lg-12 d-flex justify-content-center text-center">
+                <div  class="featur_content mt-5">
+                    <h6>WHAT WE OFFER</h6>
+                    <h1>Our Featured Solutions</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores vero veniam ratione fugit
+                        recusandae rerum libero</p>
                 </div>
             </div>
         </div>
+    </div>
+    
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12 col-lg-3">
+              <div class="card">
+                <div class="card-body">
+                    <div class="icon_card">
+                        <i class="fa-solid fa-microchip"></i>
+                    </div>
+                  <h5 class="card-title ">Robotic Automation</h5>
+                  <p class="card-text">Sorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
+                  <a href="#" class="btn btn-primary mb-3 mt-3">Discover More</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-12 col-lg-3">
+              <div class="card">
+                <div class="card-body">
+                    <div class="icon_card">
+                        <i class="fa-solid fa-sitemap"></i>
+                    </div>
+                  <h5 class="card-title ">Cognitive Automation</h5>
+                  <p class="card-text">Sorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
+                  <a href="#" class="btn btn-primary mb-3 mt-3">Discover More</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-12 col-lg-3">
+                <div class="card">
+                  <div class="card-body">
+                    <div class="icon_card">
+                        <i class="fa-solid fa-globe"></i>
+                    </div>
+                    <h5 class="card-title ">Security & Surveillance</h5>
+                    <p class="card-text">Sorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
+                    <a href="#" class="btn btn-primary mb-3 mt-3">Discover More</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-12 col-lg-3">
+                <div class="card">
+                  <div class="card-body">
+                    <div class="icon_card">
+                        <i class="fa-brands fa-creative-commons-sampling-plus"></i>
+                    </div>
+                    <h5 class="card-title ">Cognitive Engagement</h5>
+                    <p class="card-text">Sorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
+                    <a href="#" class="btn btn-primary mb-3 mt-3">Discover More</a>
+                  </div>
+                </div>
+              </div>
+          </div>
+    </div>
+
 </div>
 
 {% endblock body %}
